--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 200MB
+      max-request-size: 200MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
@@ -17,7 +21,21 @@ mybatis-plus:
 simple:
   storage:
     local:
-      dir-path: /data/work/storage/simple/local
-    root: /data/work/storage/simple
-    temp: /data/work/storage/simple/temp
-    permanent: /data/work/storage/simple/local
+      dir-path: /data/work/storage/mall/local
+    root: /data/work/storage/mall
+    temp: /data/work/storage/mall/temp
+    permanent: /data/work/storage/mall/local
+
+
+management:
+  endpoint:
+    shutdown:
+      enabled: true  #启用shutdown
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      base-path: /sactuator # 自定义管理端点的前缀(保证安全)
+  server:
+    port: 8089
+    address: 127.0.0.1 # 不允许远程管理连接(不允许外部调用保证安全)
