--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,13 +23,13 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-      - name: 构建Maven
-        run: mvn -B package --file pom.xml
-
-      - name: 发布到Github packages
-        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+#      - name: 构建Maven
+#        run: mvn -B package --file pom.xml
+#
+#      - name: 发布到Github packages
+#        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+#        env:
+#          GITHUB_TOKEN: ${{ github.token }}
 
       - name: 部署搭配服务器
         uses: appleboy/ssh-action@master
