--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,41 +16,49 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: 设置JDK环境
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+      #          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+      #          settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - name: 构建Maven
+        run: mvn -B package --file pom.xml
+    #
+    #      - name: 发布到Github packages
+    #        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+    #        env:
+    #          GITHUB_TOKEN: ${{ github.token }}
 
-#      - name: 构建Maven
-#        run: mvn -B package --file pom.xml
-#
-#      - name: 发布到Github packages
-#        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+    - name: BuildDockerImage
+        run: docker build . --file Dockerfile --tag mall-api:$(date +%s)
+          - name: Publish to Docker Repository
+            uses: elgohr/Publish-Docker-Github-Action@master
+            with:
+              name: christopherchen/practice:practice
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+
+#      - name: 部署搭配服务器
+#        uses: appleboy/ssh-action@master
 #        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-
-      - name: 部署搭配服务器
-        uses: appleboy/ssh-action@master
-        env:
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_URL: ${{ secrets.DB_URL }}
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          script_stop: true
-          envs: DB_USERNAME,DB_PASSWORD,DB_URL
-          script: |
-            export PATH=/usr/local/bin:$PATH
-            source /etc/profile
-            java -version
-            mvn -v
-            cd /data/webapp/mall/mall-api
-            git pull
-            mvn clean install
-            curl -X POST 127.0.0.1:8089/sactuator/shutdown
-            nohup java -jar -Dspring.profiles.active=prod -Dspring.datasource.username=$DB_USERNAME -Dspring.datasource.password=$DB_PASSWORD -Dspring.datasource.url=$DB_URL ./target/mall-0.0.1-SNAPSHOT.jar > console.log 2>&1 &
+#          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+#          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#          DB_URL: ${{ secrets.DB_URL }}
+#        with:
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.USERNAME }}
+#          password: ${{ secrets.PASSWORD }}
+#          port: ${{ secrets.PORT }}
+#          script_stop: true
+#          envs: DB_USERNAME,DB_PASSWORD,DB_URL
+#          script: |
+#            export PATH=/usr/local/bin:$PATH
+#            source /etc/profile
+#            java -version
+#            mvn -v
+#            cd /data/webapp/mall/mall-api
+#            git pull
+#            mvn clean install
+#            curl -X POST 127.0.0.1:8089/sactuator/shutdown
+#            nohup java -jar -Dspring.profiles.active=prod -Dspring.datasource.username=$DB_USERNAME -Dspring.datasource.password=$DB_PASSWORD -Dspring.datasource.url=$DB_URL ./target/mall-0.0.1-SNAPSHOT.jar > console.log 2>&1 &
