--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,19 +20,20 @@ jobs:
           java-version: 1.8
       #          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
       #          settings-path: ${{ github.workspace }} # location for the settings.xml file
-      - name: 构建Maven
+      - name: build maven
         run: mvn -B package --file pom.xml
       #
       #      - name: 发布到Github packages
       #        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       #        env:
       #          GITHUB_TOKEN: ${{ github.token }}
-      - name: BuildDockerImage
+      - name: build docker image
         run: docker build . --file Dockerfile --tag mall-api:$(date +%s)
+
       - name: Publish to Docker Repository
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: shj1995/mall-api:mall
+          name: shj1995/mall-api:dev
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
