--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,8 +35,6 @@ jobs:
           registry: hub.kce.ksyun.com
       - uses: actions-hub/kubectl@master
         env:
-          KUBE_HOST: ${{ secrets.KUBE_HOST }}
-          KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
-          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
           args: kubectl -n mall-api set image deployments/$MODULE_NAME $MODULE_NAME=$Dockerimage
