--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,4 +37,4 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: kubectl -n mall-api set image deployments/$MODULE_NAME $MODULE_NAME=$Dockerimage
+          args: set image deployments/mall-api mall-api=mall-api:${{ steps.time.outputs.time }}
