--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,4 +37,4 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: set image deployments/mall-api mall-api=mall-api:${{ steps.time.outputs.time }}
+          args: set image deployments/mall-api mall-api=hub.kce.ksyun.com/shj1995/mall-api:${{ steps.time.outputs.time }}
